# BE_rust_store

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  watch-all.sh
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: kafka-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
proto/: events.proto
services/mail-service/: .env.example  Cargo.toml  build.rs
services/mail-service/src/: config.rs  main.rs
services/mail-service/src/application/: commands.rs  services.rs
services/mail-service/src/domain/: models.rs  ports.rs
services/mail-service/src/infrastructure/: mod.rs  telemetry.rs
services/mail-service/src/infrastructure/templates/: mod.rs  tera_engine.rs
services/mail-service/src/infrastructure/templates/builtin/: order_confirmation.html  reset_password.html  welcome.html
services/mail-service/src/infrastructure/transports/: console.rs  mod.rs  smtp.rs
services/mail-service/src/presentation/: event_listener.rs  mod.rs
services/mail-service/src/presentation/rest/: mail_handler.rs  mod.rs  response.rs  router.rs
services/product-service/: Cargo.toml
services/user-service/: .env.example  Cargo.toml
services/user-service/migrations/: 20260317000001_create_users.sql  20260317000002_create_refresh_tokens.sql  20260320000001_add_address_age_wallet.sql  2026032001_add_address_age_wallet.sql
services/user-service/src/: config.rs  main.rs
services/user-service/src/application/commands/: auth.rs  create_user.rs  delete_user.rs  mod.rs  update_user.rs  verify_token.rs
services/user-service/src/application/queries/: get_user.rs  list_users.rs  mod.rs
services/user-service/src/application/services/: auth_service.rs  mod.rs  user_service.rs
services/user-service/src/domain/entities/: user.rs
services/user-service/src/domain/events/: mod.rs  user_events.rs
services/user-service/src/domain/repositories/: mod.rs  token_repository.rs  user_repository.rs
services/user-service/src/domain/value_objects/: email.rs  hashed_password.rs  mod.rs
services/user-service/src/infrastructure/: mod.rs  telemetry.rs
services/user-service/src/infrastructure/auth/: mod.rs
services/user-service/src/infrastructure/cache/: mod.rs
services/user-service/src/infrastructure/messaging/: mod.rs
services/user-service/src/infrastructure/persistence/: mod.rs  token_repository.rs  user_repository.rs
services/user-service/src/presentation/rest/: auth_handler.rs  mod.rs  response.rs  router.rs  user_handler.rs
shared/domain-core/: Cargo.toml
shared/domain-core/src/: aggregate.rs  domain_event.rs  entity.rs  error.rs  lib.rs  pagination.rs  repository.rs  value_object.rs
