[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "user-service"
path = "src/main.rs"

[dependencies]
domain-core = { path = "../../shared/domain-core" }

# Async
tokio = { workspace = true }

# Web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Serde
serde = { workspace = true }
serde_json = { workspace = true }

# DB
sqlx = { workspace = true }

# Messaging
async-nats = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-axum = { workspace = true }
